# controllers/sign.controller.js
@@ -7,6 +7,10 @@ module.exports.signup = (req, res) => {
 	res.render('sign/signup')
 }
 
+module.exports.signin = (req, res) => {
+	res.render('sign/signin')
+}
+
 module.exports.postSignup = async (req, res) => {
 	bcrypt.hash(req.body.password, saltRounds, function(err, hash) {
 	    // Store hash in your password DB.
@@ -18,23 +22,33 @@ module.exports.postSignup = async (req, res) => {
 
 module.exports.postSignin = (req, res) => {
 	User.findOne({
-			email: req.body.email 
+			email: req.body.signinEmail 
 		}
 	).exec((err, user) => {
 		console.log(user, "first step");
 		if (!user) {
-			console.log(user, 1)
-			res.redirect("/sign/up");
+			res.render("sign/signin", {
+				errors: "Either email or password is wrong"
+			});
 			return;
 		} else {
-			bcrypt.compare(req.body.password, user.password, function(err, result) {
+			bcrypt.compare(req.body.signinPassword, user.password, function(err, result) {
 			    // result = false
 			    if (result === false) {
 			    	console.log(user, 2)
-					res.redirect("/sign/up");
+					res.redirect("sign/signin", {
+						errors: "Either email or password is wrong"
+					});
 			    } else {
-					console.log(user, 3)
-					// res.locals.user = user;
+					console.log(user, 3);
+					// update localStorage to db
+					// User.update({
+					// 	_id: user._id 
+					// }, { $set: {address: "2 thyra" }}).exec();
+
+					res.cookie("user_id", user._id, {
+				        signed: true
+				      });
 					res.redirect("/");
 			    }
 			});
