# middleware/auth.middleware.js
@@ -1,14 +1,15 @@
-var db = require('../db')
+var User = require('../models/model.user');
+
 module.exports.requireAuth = (req, res, next) => {
-  if (!req.signedCookies.userId) {
-    res.redirect('/auth/login');
+  if (!req.signedCookies.user_id) {
+    res.redirect('/sign/in');
     return;
   }
-  var user = db.get('users').find({
-    id: req.signedCookies.userId
-  }).value();
+  var user = User.find({
+    id: req.signedCookies.user_id
+  });
   if (!user) {
-    res.redirect('/auth/login');
+    res.redirect('/sign/in');
     return;
   }
   res.locals.user = user;
