# routes/sign.route.js
@@ -6,6 +6,8 @@ var Router = express.Router('');
 
 Router.get('/up', controller.signup);
 
+Router.get('/in', controller.signin);
+
 Router.post('/up', controller.postSignup);
 
 Router.post('/in', controller.postSignin);
